[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/diageticStuff/npcHealthBar3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/diageticStuff/npcNameTag3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/NPC/simpleCharacter.gd" type="Script" id=3]
[ext_resource path="res://Actors/NPC/genericSpeaker.gd" type="Script" id=4]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.176471, 0.862745, 0.0980392, 1 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.5

[node name="genericSpeaker" type="KinematicBody"]
script = ExtResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 3 )

[node name="npcNameTag3D" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.55693, 0 )

[node name="npcHealthBar3D" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.19339, 0 )

[node name="simpleCharacter" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="input_event" from="." to="." method="_on_genericEnemy_input_event"]
